--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html, body {
+Ihtml, body {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -15,7 +15,7 @@ html, body {
       box-shadow: 10px 10px 0 #1470AF;
       background: white;
       margin-top: 20px;
-      width: 90%;
+      width: 100%;
       max-width: 300px;
     }
 
