--- a/style.css
+++ b/style.css
@@ -49,15 +49,18 @@ Ihtml, body {
       padding: 20px;
     }
 
-    .carousel img {
-      width: 100%;
-      max-width: 270px;
-      height: 200px;
-      object-fit: cover;
-      border: 2px solid #1470AF;
-      box-shadow: 4px 4px 0 #1470AF;
-      background-color: #FFFFFF;
-    }
+.carousel img {
+  max-width: 100%;
+  max-height: 200px;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+  border: 2px solid #1470AF;
+  box-shadow: 4px 4px 0 #1470AF;
+  background-color: #FFFFFF;
+}
+
+
 
     .nav {
       background-color: #FFFFFF;
