--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@ html, body {
   font-family: 'Courier Prime', Courier, monospace;
 }
 
+iframe:focus {
+  outline: none;
+}
+
+
+
 .carousel-window {
   border: 4px solid #1470AF;
   box-shadow: 10px 10px 0 #1470AF;
