--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ iframe:focus {
 .carousel img {
   display: block;
   max-width: 190px;
-  height: auto;
+  max-height: 190px;
   object-fit: contain;
   border: 2px solid #1470AF;
   box-shadow: 4px 4px 0 #1470AF;
