--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ iframe:focus {
   background-color: #FFFFFF;
   border: 2px solid #105584;
   box-shadow: 4px 4px 0 #105584;
-  color: #1470AF;
+  color: #105584;
   font-size: 1.5rem;
   padding: 10px;
   cursor: pointer;
